# vercel-fastapi-template

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: index.py
api/v1/: api.py
api/v1/endpoints/: weather.py
core/: config.py
schemas/: response_schema.py
