###############################
# PEP 621 project declaration #
###############################
[project]
name = "app"
version = "0.1.0"
description = "A sample fastapi project created with create-fastapi-project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Arame", email = "aramegabrielyan111@gmail.com" },
]

# Runtime dependencies inferred from imports
dependencies = [
  "fastapi[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "fastapi-pagination",
  "httpx",
  "asyncer",
  "sqlmodel",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
]

########################
# Build system backend #
########################
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

#############################
# Hatch build configuration #
#############################
[tool.hatch.build.targets.wheel]
# Explicitly list package directories to include in the wheel.
# This project keeps packages at repository root rather than under `src/`.
packages = [
  "api",
  "core",
  "utils",
  "schemas",
]

#############
# Formatting #
#############
[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311", "py312" ]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

#########
# Ruff  #
#########
[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]

#########
# mypy  #
#########
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]
